<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/takepicture_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height"
        android:background="@android:color/black">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/takepicture_close_button_size"
            android:layout_height="@dimen/takepicture_close_button_size"
            android:layout_gravity="center"
            android:background="@drawable/ic_back_button" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"></View>

        <ImageButton
            android:id="@+id/flashlight_button"
            android:layout_width="@dimen/takepicture_close_button_size"
            android:layout_height="@dimen/takepicture_close_button_size"
            android:layout_gravity="center"
            android:background="@drawable/ic_flash" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_toolbar"
        android:layout_gravity="center_horizontal" />

    <View
        android:id="@+id/circle"
        android:layout_marginTop="@dimen/abc_action_bar_default_height"
        android:background="@drawable/black_circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Height will be overridden programmatically -->
    <LinearLayout
        android:id="@+id/bottom_colored_stub_panel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/cameraPreview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/upload_photo_button"
            android:layout_width="@dimen/simple_camera_button_size"
            android:layout_height="@dimen/simple_camera_button_size"
            android:layout_gravity="center"
            android:background="@drawable/ic_upload"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/take_picture_button"
            android:layout_width="@dimen/camera_button_width"
            android:layout_height="@dimen/camera_button_height"
            android:layout_gravity="center"
            android:background="@drawable/ic_camera" />

    </LinearLayout>

</RelativeLayout>
